# do_an_auth_service

./: .env.example  .gitignore  API_USAGE.md  Cargo.toml  JWT_AND_BLOCKCHAIN_GUIDE.md  README.md  SCHEMA_UPDATE_SUMMARY.md  USER_TEMPLATE.csv  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251028_000002_restructure_major_department.rs  main.rs
src/: api_docs.rs  app.rs  bootstrap.rs  config.rs  extractor.rs  lib.rs  state.rs  static_service.rs
src/blockchain/: contract.rs  helpers.rs  mod.rs  service.rs
src/entities/: department.rs  major.rs  major_department_user.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_major.rs  wallet.rs
src/middleware/: mod.rs  permission.rs
src/routes/: mod.rs
src/routes/auth/: dto.rs  route.rs
src/routes/departments/: dto.rs  route.rs
src/routes/health/: route.rs
src/routes/majors/: dto.rs  mod.rs  route.rs
src/routes/managers/: dto.rs  route.rs
src/routes/profile/: dto.rs  route.rs
src/routes/students/: dto.rs  mod.rs  route.rs
src/routes/users/: dto.rs  mod.rs  route.rs
src/utils/: tracing.rs
