[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
do_an_lib = { path = "../do_an_lib" }

# web
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
http = { version = "1.3" }
http-body-util = { version = "0.1" }
tower-http = { version = "0.6", features = ["full"] }
tower_governor = { version = "0.7", features = ["axum", "tracing"] }
tower = { version = "0.5", features = ["full"] }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "debug", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2", features = ["debug"] }
jsonwebtoken = "10.1.0"
tokio = { version = "1.48.0", features = ["full"]}
once_cell = "1.21.3"
clap = { version = "4.5.50", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
dotenv = "0.15.0"
tracing = "0.1.41"

# blockchain
ethers = { version = "2.0.14", features = ["abigen", "ws"] }
rand = "0.8"
hex = "0.4"

# excel parsing
calamine = "0.26"

# password hashing
bcrypt = "0.16"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
